13 Login with google

--- a/.env.template
+++ b/.env.template
@@ -2,3 +2,6 @@ MONGODB=mongodb://localhost:27018/todo
 PORT=3000
 SALT_SYNC=10
 JWT_SECRET=mySecretKey
+ID_CLIENT_G=secretValue
+SECRET_CLIENT_G=secretValue
+CALLBACK_URL_G=secretValue
